# rs-airllm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs  model_config.rs
src/generation/: config.rs  kv_cache.rs  mod.rs  sampler.rs
src/layers/: loader.rs  mod.rs  prefetch.rs  splitter.rs
src/model/: auto_model.rs  base.rs  llama.rs  mod.rs
src/quantization/: int8.rs  mod.rs  nf4.rs  tensor.rs
src/utils/: device.rs  download.rs  memory.rs  mod.rs
